// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`draw calls and determinism > compiles fixture flatDripEdge identically every time, with only procedural primitives 1`] = `
{
  "roof": [
    "architecture-house-roof-plane box #b9b5aa concrete @0,3.625,0 13.8,0.25,9.8",
    "architecture-house-roof-soffit box #b9b5aa concrete @0,3.518,0 13.76,0.036,9.76",
    "architecture-house-roof-fascia-north box #b9b5aa concrete @0,3.625,-4.88 13.8,0.25,0.04",
    "architecture-house-roof-fascia-south box #b9b5aa concrete @0,3.625,4.88 13.8,0.25,0.04",
    "architecture-house-roof-fascia-east box #b9b5aa concrete @6.88,3.625,0 0.04,0.25,9.8",
    "architecture-house-roof-fascia-west box #b9b5aa concrete @-6.88,3.625,0 0.04,0.25,9.8",
    "architecture-house-roof-shadow-gap box #111619 @0,3.35,0 13.8,0.3,9.8",
    "architecture-house-roof-drip-edge mesh #6f6d66 tris=48 x=-6.9,6.9 y=3.75,3.79 z=-4.9,4.9",
  ],
  "systems": {
    "primary": "flat-parapet",
    "roofs": [
      {
        "massId": "house",
        "recipeId": "house-roof",
        "role": "primary",
        "system": "flat-parapet",
      },
    ],
    "warnings": [],
  },
}
`;

exports[`draw calls and determinism > compiles fixture flatParapet identically every time, with only procedural primitives 1`] = `
{
  "roof": [
    "architecture-house-roof-plane box #b9b5aa concrete @0,3.325,0 12,0.25,8",
    "architecture-house-roof-soffit box #b9b5aa concrete @0,3.218,0 11.96,0.036,7.96",
    "architecture-house-roof-fascia-north box #b9b5aa concrete @0,3.325,-3.98 12,0.25,0.04",
    "architecture-house-roof-fascia-south box #b9b5aa concrete @0,3.325,3.98 12,0.25,0.04",
    "architecture-house-roof-fascia-east box #b9b5aa concrete @5.98,3.325,0 0.04,0.25,8",
    "architecture-house-roof-fascia-west box #b9b5aa concrete @-5.98,3.325,0 0.04,0.25,8",
    "architecture-house-roof-coping mesh #6f6d66 tris=48 x=-6.03,6.03 y=3.95,4 z=-4.03,4.03",
  ],
  "systems": {
    "primary": "flat-parapet",
    "roofs": [
      {
        "massId": "house",
        "recipeId": "house-roof",
        "role": "primary",
        "system": "flat-parapet",
      },
    ],
    "warnings": [],
  },
}
`;

exports[`draw calls and determinism > compiles fixture slateGable identically every time, with only procedural primitives 1`] = `
{
  "roof": [
    "architecture-house-roof-infill mesh #cfc8ba tris=2 x=-5.5,5.5 y=3.2,5.934 z=-3.5,3.5",
    "architecture-house-roof-surface mesh #5a5c60 slate tris=4 module=0.3,0.2 x=-5.95,5.95 y=2.848,5.934 z=-3.95,3.95",
    "architecture-house-roof-trim mesh #4a3a2a tris=72 x=-5.95,5.95 y=2.628,5.919 z=-3.938,3.938",
    "architecture-house-roof-caps mesh #4a4b4f tris=24 x=-5.95,5.95 y=5.839,6.014 z=-0.172,0.172",
  ],
  "systems": {
    "primary": "tile-shingle",
    "roofs": [
      {
        "massId": "house",
        "recipeId": "house-roof",
        "role": "primary",
        "system": "tile-shingle",
      },
    ],
    "warnings": [],
  },
}
`;

exports[`draw calls and determinism > compiles fixture standingSeamButterfly identically every time, with only procedural primitives 1`] = `
{
  "roof": [
    "architecture-house-roof-infill mesh #efeae0 tris=8 x=-6,6 y=3.2,3.905 z=-4,4",
    "architecture-house-roof-surface mesh #3f474d standing-seam-metal tris=4 x=-6.9,6.9 y=3.2,4.064 z=-4.9,4.9",
    "architecture-house-roof-seams mesh #3f474d tris=680 x=-6.899,6.899 y=3.202,4.097 z=-4.889,4.889",
    "architecture-house-roof-trim mesh #262b2e tris=96 x=-6.9,6.9 y=2.983,4.044 z=-4.938,4.938",
  ],
  "systems": {
    "primary": "standing-seam",
    "roofs": [
      {
        "massId": "house",
        "recipeId": "house-roof",
        "role": "primary",
        "system": "standing-seam",
      },
    ],
    "warnings": [],
  },
}
`;

exports[`draw calls and determinism > compiles fixture standingSeamGable identically every time, with only procedural primitives 1`] = `
{
  "roof": [
    "architecture-house-roof-infill mesh #6b5138 tris=2 x=-6,6 y=3.2,5.365 z=-3.75,3.75",
    "architecture-house-roof-surface mesh #3f474d standing-seam-metal tris=4 x=-6.5,6.5 y=2.911,5.365 z=-4.25,4.25",
    "architecture-house-roof-seams mesh #3f474d tris=640 x=-6.499,6.499 y=2.924,5.383 z=-4.246,4.246",
    "architecture-house-roof-trim mesh #262b2e tris=96 x=-6.5,6.5 y=2.691,5.424 z=-4.24,4.24",
  ],
  "systems": {
    "primary": "standing-seam",
    "roofs": [
      {
        "massId": "house",
        "recipeId": "house-roof",
        "role": "primary",
        "system": "standing-seam",
      },
    ],
    "warnings": [],
  },
}
`;

exports[`draw calls and determinism > compiles fixture standingSeamHip identically every time, with only procedural primitives 1`] = `
{
  "roof": [
    "architecture-house-roof-surface mesh #8a9298 zinc tris=6 x=-7.2,7.2 y=2.888,4.981 z=-4.7,4.7",
    "architecture-house-roof-seams mesh #8a9298 tris=1080 x=-7.195,7.195 y=2.897,5.005 z=-4.695,4.695",
    "architecture-house-roof-trim mesh #53585b tris=168 x=-7.213,7.213 y=2.668,5.04 z=-4.713,4.713",
  ],
  "systems": {
    "primary": "standing-seam",
    "roofs": [
      {
        "massId": "house",
        "recipeId": "house-roof",
        "role": "primary",
        "system": "standing-seam",
      },
    ],
    "warnings": [],
  },
}
`;

exports[`draw calls and determinism > compiles fixture standingSeamShed identically every time, with only procedural primitives 1`] = `
{
  "roof": [
    "architecture-house-roof-infill mesh #efeae0 tris=8 x=-5.5,5.5 y=3.2,4.815 z=-3.5,3.5",
    "architecture-house-roof-surface mesh #3f474d standing-seam-metal tris=12 x=-6.1,6.1 y=3.2,5.143 z=-4.1,4.1",
    "architecture-house-roof-seams mesh #3f474d tris=300 x=-6.099,6.099 y=3.403,5.175 z=-4.088,4.095",
    "architecture-house-roof-trim mesh #262b2e tris=48 x=-6.1,6.1 y=3.4,5.183 z=-4.1,4.1",
  ],
  "systems": {
    "primary": "standing-seam",
    "roofs": [
      {
        "massId": "house",
        "recipeId": "house-roof",
        "role": "primary",
        "system": "standing-seam",
      },
    ],
    "warnings": [],
  },
}
`;

exports[`draw calls and determinism > compiles fixture tileHip identically every time, with only procedural primitives 1`] = `
{
  "roof": [
    "architecture-house-roof-surface mesh #b8623e terracotta tris=6 module=0.17,0.3 x=-7.1,7.1 y=2.894,5.238 z=-4.6,4.6",
    "architecture-house-roof-trim mesh #4a3a2a tris=48 x=-7.1,7.1 y=2.674,2.874 z=-4.6,4.6",
    "architecture-house-roof-caps mesh #975033 tris=120 x=-7.122,7.122 y=2.904,5.32 z=-4.622,4.622",
  ],
  "systems": {
    "primary": "tile-shingle",
    "roofs": [
      {
        "massId": "house",
        "recipeId": "house-roof",
        "role": "primary",
        "system": "tile-shingle",
      },
    ],
    "warnings": [],
  },
}
`;

exports[`draw calls and determinism > compiles fixture tileWithFlatLink identically every time, with only procedural primitives 1`] = `
{
  "roof": [
    "architecture-main-roof-infill mesh #efeae0 tris=2 x=-6,6 y=3.2,5.221 z=-3.5,3.5",
    "architecture-main-roof-surface mesh #b8623e terracotta tris=4 module=0.17,0.3 x=-6.5,6.5 y=2.911,5.221 z=-4,4",
    "architecture-main-roof-trim mesh #4a3a2a tris=72 x=-6.5,6.5 y=2.691,5.203 z=-3.99,3.99",
    "architecture-main-roof-caps mesh #975033 tris=24 x=-6.5,6.5 y=5.144,5.302 z=-0.176,0.176",
    "architecture-link-roof-plane box #b9b5aa concrete @8.5,3.325,0 5,0.25,3.5",
    "architecture-link-roof-soffit box #b9b5aa concrete @8.5,3.218,0 4.96,0.036,3.46",
    "architecture-link-roof-fascia-north box #b9b5aa concrete @8.5,3.325,-1.73 5,0.25,0.04",
    "architecture-link-roof-fascia-south box #b9b5aa concrete @8.5,3.325,1.73 5,0.25,0.04",
    "architecture-link-roof-fascia-east box #b9b5aa concrete @10.98,3.325,0 0.04,0.25,3.5",
    "architecture-link-roof-fascia-west box #b9b5aa concrete @6.02,3.325,0 0.04,0.25,3.5",
    "architecture-link-roof-coping mesh #6f6d66 tris=48 x=5.97,11.03 y=3.85,3.9 z=-1.78,1.78",
    "architecture-wing-roof-infill mesh #efeae0 tris=2 x=11,18 y=3.2,5.221 z=-4.5,4.5",
    "architecture-wing-roof-surface mesh #b8623e terracotta tris=4 module=0.17,0.3 x=10.5,18.5 y=2.911,5.221 z=-5,5",
    "architecture-wing-roof-trim mesh #4a3a2a tris=72 x=10.51,18.49 y=2.691,5.203 z=-5,5",
    "architecture-wing-roof-caps mesh #975033 tris=24 x=14.324,14.676 y=5.144,5.302 z=-5,5",
  ],
  "systems": {
    "counterpoint": "flat-parapet",
    "primary": "tile-shingle",
    "roofs": [
      {
        "massId": "main",
        "recipeId": "main-roof",
        "role": "primary",
        "system": "tile-shingle",
      },
      {
        "massId": "link",
        "reason": "Tile / shingle cannot cover a flat roof",
        "recipeId": "link-roof",
        "role": "counterpoint",
        "system": "flat-parapet",
      },
      {
        "massId": "wing",
        "recipeId": "wing-roof",
        "role": "primary",
        "system": "tile-shingle",
      },
    ],
    "warnings": [],
  },
}
`;
